Add `info <name>`: full details of a shim, with an ASCII flow diagram
Prints everything known about one shim in sections: overview (policy and
what it does in plain words, diagnostic/force), locations (symlink health,
the defining config file -- config.toml or a split file and which of the
three locations it's in -- a warning when a split file shadows a stale
config.toml entry, and whether the shim is actually first on $PATH or
bypassed by another binary), commands (source incl. what an auto source
resolves to, fallback, args, with health tags), policy settings (patterns,
exit codes, route args, rewrite rules, every route-map route with its own
args), the effective trial-run timeout/limit and where each comes from, and
finally a 7-bit ASCII diagram of how an invocation flows through the shim,
drawn per policy from its real resolved paths, args, routes and thresholds.

Read-only; exits 0 for any shim it can describe (doctor stays the health
check). An unknown name fails with a typo suggestion, and an orphaned
symlink is reported and exits 1. Colored on a terminal, plain otherwise.

Also documents `edit <name>` in the man page, which the earlier change
missed. Tests: tests/test_info.sh covers every policy, the error cases, and
asserts piped output is pure printable ASCII with no stray markup bytes.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011rqBePxF4nHxSn6LjEWg89